# terabox-backup-manager

./: .env.example  .gitignore  Dockerfile  README.md  do git (mantém os arquivos no disco)  docker-compose.yml  pyproject.toml
node/: package.json
