[project]
name = "terabox-backup-manager"
version = "0.1.0"
description = "Self-hosted backup manager for Terabox Premium"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.09",
    httpx>=0.27"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"